infrastructure/k8s/health-metrics-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-metrics-service
  namespace: health-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health-metrics-service
  template:
    metadata:
      labels:
        app: health-metrics-service
    spec:
      containers:
        - name: health-metrics-service
          image: acrhealth.azurecr.io/health-metrics-service:${TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 4003        # đúng với app.listen(...)
---
apiVersion: v1
kind: Service
metadata:
  name: health-metrics-service
  namespace: health-tracking
spec:
  selector:
    app: health-metrics-service
  ports:
    - port: 4003
      targetPort: 4003
  type: ClusterIP
