infrastructure/k8s/progress-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: progress-service
  namespace: health-tracking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: progress-service
  template:
    metadata:
      labels:
        app: progress-service
    spec:
      containers:
        - name: progress-service
          image: acrhealth.azurecr.io/progress-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4004     
              name: http-web
---
apiVersion: v1
kind: Service
metadata:
  name: progress-service
  namespace: health-tracking
  labels:
    app: progress-service
    release: monitoring-stack
spec:
  selector:
    app: progress-service
  ports:
    - name: http-web
      port: 4004
      targetPort: 4004
  type: ClusterIP
