infrastructure/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-ingress
  namespace: health-tracking
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx   # 👈 FIX QUAN TRỌNG
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
